Version 1.2.1
-----------------------------------------------------------------
3 May 2007
+ Fixed bug with making home link.

Version 1.2.0
------------------------------------------------------------------
24 April 2007
+ Changed id to class in basic layout.
+ Updated files: templates/menu_layout/basic.tpl

17 April 2007
+ Fixed bug with pinning links
+ Fixed notice call in Menu_Admin
+ Changed pin keys to use title and url

16 April 2007
+ Moved htmlentity call to the setTitle function.
+ Raised default menu link length.

5 April 2007
+ Bug #1688342 - Added htmlentities to title to allow foreign characters

4 April 2007
+ Added German translation
+ Updated language functions.

Version 1.1.1
------------------------------------------------------------------
19 March 2007
+ Fixed bug preventing 3rd tier link display.

16 March 2007
+ Added ability to pin any page for addition into the menu.

13 March 2007
+ Changed template so IE would hide the menu
+ Changed the menu margins so both FF and IE could access the menu.

5 March 2007
+ Changed control panel icon

Version 1.1.0
------------------------------------------------------------------
19 February 2007
+ Reduced translate links
+ Removed register.php and unregister parameter from boost.php

14 February 2007
+ Removed references from object constructors
+ Removed a unneeded double urlencode and a urldecode

6 February 2007
+ Default menu is created on install.

2 February 2007
+ Links missing &amp; were causing validation errors. Fixed.
+ Fixed missing quote in config.php links
+ Updated files: conf/config.php

9 January 2007
+ Added pinLink function for developers to add a link to any menu.
+ Added mechanism for adding a pinned link.
+ Updated files: conf/config.php, templates/links/link.tpl,
  templates/menu_layout/basic.tpl, img/attach.png,
  templates/admin/pin_list.tpl

27 November 2006
+ Added a color : inherit to menu's style sheet to conform with css
  standards.

Version 1.0.4