@@ -32,4 +32,7 @@ define('MENU_ADMIN_OFF', dgettext('menu', 'Admin mode off'));
 define('MENU_PIN', sprintf('<img style="float:right" src="./images/mod/menu/pin.png" alt="%s" title="%s" />', dgettext('menu', 'Pin to item'), dgettext('menu', 'Pin to item')));
 define('MENU_UNPIN', sprintf('<img style="float:right" src="./images/mod/menu/remove.png" alt="%s" title="%s" />', dgettext('menu', 'Unpin menu'), dgettext('menu', 'Unpin menu')));
 
+define('NO_POST', sprintf('<img src="./images/mod/menu/remove.png" title="%s" alt="%s" />', dgettext('menu', 'No admin options'), dgettext('menu', 'No admin options')));
+
+
 ?>
