@@ -1,0 +1,10 @@
+<?php
+  /**
+   * @version $Id$
+   * @author Matthew McNaney <mcnaney at gmail dot com>
+   */
+
+$settings['float_mode'] = 1;
+
+
+?>
