@@ -1,1 +1,16 @@
-{ADMIN_LINK}
+{START_FORM}
+<table cellpadding="4">
+  <tr>
+    <td><strong>{ADMIN_MODE_NOTE}</strong></td>
+    <td>
+       {ADMIN_MODE_1} {ADMIN_MODE_1_LABEL}<br />
+       {ADMIN_MODE_2} {ADMIN_MODE_2_LABEL}
+    </td>
+  </tr>
+  <tr>
+    <td><strong>{FLOAT_MODE_LABEL}</strong></td>
+    <td>{FLOAT_MODE}</td>
+  </tr>
+</table>
+{SUBMIT}
+{END_FORM}
