@@ -1,0 +1,25 @@
+<table>
+   <tr>
+      <td>{PIN_LINK}</td>
+   </tr>
+   <tr>
+      <td>{ADD_LINK}</td>
+   </tr>
+   <tr>
+      <td>{ADD_SITE_LINK}</td>
+   </tr>
+   <tr>
+      <td>{EDIT_LINK}</td>
+   </tr>
+   <tr>
+      <td>{DELETE_LINK}</td>
+   </tr>
+   <tr>
+      <td>{MOVE_LINK_UP}</td>
+   </tr>
+   <tr>
+      <td>{MOVE_LINK_DOWN}</td>
+   </tr>
+</table>
+<hr />
+<div style="text-align : center;">{CLOSE}</div>
