@@ -1,3 +1,9 @@
+4 June 2007
++ Admin icon for links is now clickable. Pulls up window of options.
++ Added ability to disable floating admin links.
++ Updated files: conf/config.php, templates/admin/settings.tpl,
+                 templates/links/link.tpl, templates/popup_admin.tpl
+
 Version 1.2.1
 -----------------------------------------------------------------
 3 May 2007
